--- a/css/index.less
+++ b/css/index.less
@@ -189,7 +189,7 @@ h3{
 	}
 }
 .formcon{
-	padding: 70/37.5rem 30/37.5rem;
+	padding: 70/37.5rem 30/37.5rem 0;
 	.form-box{
 		width: 100%;
 		height: 1545/37.5rem;
@@ -198,16 +198,16 @@ h3{
 		box-shadow: 0 0 20px rgba(133,133,133,0.4);
 		.form-list{
 			width: 100%;
-			padding-bottom: 40/37.5rem;
+			padding-bottom: 20/37.5rem;
 		}
 	}
 	.submit{
-		width: 400/37.5rem;
-		height: 60/37.5rem;
+		width: 420/37.5rem;
+		height: 70/37.5rem;
 		background: url(../images/submit-btn.png) no-repeat center center/contain;
 		color:#fff;
 		text-align: center;
-		line-height: 60/37.5rem;
+		line-height: 70/37.5rem;
 		font-size: 36/37.5rem;
 		margin:0 auto;
 	}
